--- a/elements/bugs.org
+++ b/elements/bugs.org
@@ -1,9 +1,3 @@
-# Local Variables:
-# fill-column: 70
-# org-adapt-indentation: nil
-# org-download-image-dir: "./img/"
-# eval: (auto-fill-mode)
-# End:
 #+title: entropy-emacs bugs collection
 #+author: Entropy
 
@@ -56,9 +50,10 @@ limitation of the bug of vanilla emacs or =entropy-emacs=.
    :CUSTOM_ID: h-0c3ab89e-a470-42d2-946e-4f217ea2f20c
    :END:
 
-   - State "HANGUP"     from "MARKING"    [2019-07-29 Mon 18:44] \\
+- State "HANGUP"     from "MARKING"    [2019-07-29 Mon 18:44] \\
      Has patched by specific 'kill-buffer' action, waiting for bug reply
      from emacs-bug-mailist.
+
 
  *Bug description:*
 
@@ -135,7 +130,7 @@ limitation of the bug of vanilla emacs or =entropy-emacs=.
    :CUSTOM_ID: h-74ea996b-2f5d-4872-b5e8-2dc152e466a1
    :END:
 
- - State "MARKING"    from              [2019-07-31 Wed 01:20]
+- State "MARKING"    from              [2019-07-31 Wed 01:20]
 
 
  #+BEGIN_EXAMPLE
@@ -175,4 +170,28 @@ limitation of the bug of vanilla emacs or =entropy-emacs=.
     - shackle window popup feature (ibus tooltip losst when popout the
       shackle buffer at the first time)
 
-   
+** MARKING =solaire-mode= can not working correctly in pdumper-session
+
+- State "MARKING"    from              [2019-08-24 Sat 19:27]
+
+
+1) Bug description:
+    
+The emacs session of pdumper loaded type can not covering solaire-mode
+feature fully, the solaired buffer has no significant color rendering
+efficient, that the solaired buffer has the same color face as the
+non-solaired buffer.
+
+1) Influences aspects suspects
+
+   1) Pdumper session lost some features relied by ~solaire-mode~.
+   2) This must try another way to configured ~solaire-mode~ with
+      pdumper session.
+
+* COMMENT Local Varaibles  
+# Local Variables:
+# fill-column: 70
+# org-adapt-indentation: nil
+# org-download-image-dir: "./img/"
+# eval: (auto-fill-mode)
+# End:
