--- a/README.org
+++ b/README.org
@@ -1,18 +1,17 @@
-# Created 2019-06-17 Mon 07:17
+# Created 2019-09-06 Fri 19:57
 #+TITLE: Url proxy for emacs eww and w3m
 #+AUTHOR: entropy
 
-* Copyright (C) 20190617  Entropy
+* Copyright (C) 20190906  Entropy
 #+BEGIN_EXAMPLE
 Author:        Entropy <bmsac0001@gmail.com>
 Maintainer:    Entropy <bmsac001@gmail.com>
-URL:           url
-Package-Version: package-version
-Version:       file-version
-Created:       year-month-date hour:min:sec
-Keywords:      kewords-1, kewords-2, kewords-3,
+URL:           https://github.com/c0001/entropy-proxy-url/
+Package-Version: v0.1.0
+Created:       2018
+Keywords:      proxy
 Compatibility: GNU Emacs emacs-version;
-Package-Requires: ((emacs "24") (cl-lib "0.5"))
+Package-Requires: ((emacs "26") (cl-lib "0.5"))
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -30,7 +29,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 * Commentary:
 
-An emacs extension trafficked url matching by proxy regxp rule-set or
+An emacs extension trafficking url matching by proxy regxp rule-set or
 pull down them into whole proxy tunnel.
 
 This package perform as the library role for the functional provision.
@@ -68,7 +67,7 @@ regexp rule-set for determining whether go into the proxy tunnerl.
 
 The regexp filter can be generized of more functional part, by
 matching whatever you want. The rule-set internal customized variable
-=entropy/proxy-url-regexp-list= as is.
+=entropy/proxy-url-gfw-regexp-alist= as is.
 
 This package use the [[https://github.com/gfwlist/gfwlist][gfwlist]] as the default ruleset, for the original
 prototype for it was the simple variant of [[https://en.wikipedia.org/wiki/Proxy_auto-config][PAC]](proxy auto
@@ -85,91 +84,59 @@ will not be the latest version.
 
 ** Methods given
 
-The time =entropy-proxy-url='s provision as the mentioned above that
-given for the top web browsing scene both of =eww= and =emacs-w3m=.
+We using property list as a =PROXY-RECIPE= to given the customized
+way for specify the proxy subroutine.
 
-There's two macro defined for the core proxy diversion filter:
+As the focurs on, the =PROXY-RECIPE= mainly use ~advice-add~ to
+around wrappering the target underline functional commands, like
+~w3m-goto-url~ , ~url-retrieve~ etc.
 
-1. ~entropy/proxy-url-type-form~
+The =PROXY-RECIPE= slots valid for those listed below:
 
-   Form to automatically creating the proxy setting function,
-   arguments of:
+- =:group-name= : a symbol to indicate the recipe name
+  identification
 
-   - =FUNC-REGEXP=:
+- =:advice-fors= : list of functions for be wrappered with
+  `entropy/proxy-url` specification
 
-     Function to set proper regexp proxy config to refer target
-     trigger operation.
+- =:type-source= : a symbol restored the proxy type (i.e. which
+  described in `entropy/proxy-url-initial-typesource')
 
-   - =FUNC-FULL=:
+- =:PROXY-MECHANISM= : a symbol indicate the proxy mechanism
+  (i.e. describe for `entropy/proxy-url-default-proxy-server-obj')
 
-     Function to set proper full proxy config to refer target trigger
-     operation.
+- =:server-host-alist= : a symbol indicate the proxy server host
+  alist which using the same struct with
+  `entropy/proxy-url-default-proxy-server-obj'"
 
-   - =FUNC-CLEAN=
-
-     Function to recover the original target trigger operation's
-     config.
-
-   - =URL=:
-
-     Url requesting string.
-
-   - =TYPE-SOURCE=
-
-     The proxy type of 't', 'regexp', 'nil' corresponding to 'full',
-     'regexp', 'clean' respectively.
-
-2. ~entropy/proxy-url-swith-form~
-
-   Form of switching the proxy type dynamically.
-
-   The only argument =TYPE-SOURCE= as the ~setf~ place for stored the
-   proxy type selected lastly.
-
-
-
-All the arguments name as the unified meaning as is. Thus, the
-implementation both for 'eww' and 'emacs-w3m' feature for:
-
-| Target interaction | proxy-type | func-implementation                 |
-|--------------------+------------+-------------------------------------|
-| ~w3m-retrieve~     | regexp     | ~entropy/proxy-url--regexp-for-w3m~ |
-|                    | full       | ~entropy/proxy-url--full-for-w3m~   |
-|                    | clean      | ~entropy/proxy-url--clean-for-w3m~  |
-|                    |            |                                     |
-|--------------------+------------+-------------------------------------|
-| ~eww-browse-url~   | regexp     | ~entropy/proxy-url--regexp-for-eww~ |
-|                    | full       | ~entropy/proxy-url--full-for-eww~   |
-|                    | clean      | ~entropy/proxy-url--clean-for-eww~  |
-
-
-
-For those implementation's =TYPE-SOURCE= are
-=entropy/proxy-url-enable-eww= and =entropy/proxy-url-enable-w3m=.
+- =:bind= : a alist which the each car of the element was the
+  key-map and the cdr was the keybinding specific valid as the
+  form for =kbd= function.
 
 ** Proxy reset
 
-For those cases that you want to quickly reset the proxy server, you
-should reset the proxy config among the eww and w3m utilities, the
-interactive function ~entropy/proxy-url-reset-proxy~ give the way for
-as. For then, you could reset the =entropy/proxy-mode-url-proxy= value
-and then all has done.
-
+For those cases that you want to quickly reset the proxy server,
+just reset your recipes =:server-host-alist= slot's symbol value,
+all functional form will obtain the new proxy-host value at next
+time for proxy-connection doing.
 
 * Configuration:
 
+Just require it, and building =PROXY-RECIPE= you specified.
+
 ** Target operation advice
 
-Now, as the designation for as be library of proxy toggle one,
-=entropy-proxy-url= didn't advicing each target operation function as
-the =:before= type internally, you will do as manually as:
+There're two built-in =proxy-recipe= i.e. the
+~entropy/proxy-url--eww-recipe~ and
+~entropy/proxy-url--w3m-recipe~, you can call function
+~entropy/proxy-url-make-builtin-recipes~ to buiding
+them. Futhermore you can specify your own recipe follow what
+mentioned above, and use function ~entropy/proxy-url-make-recipes~
+to buiding it(see its doc-string for more details).
 
-#+BEGIN_SRC elisp
-  (advice-add 'eww-browse-url :before #'entropy/proxy-url-proxy-choice-for-eww)
-  (advice-add 'w3m-goto-mailto-url :before #'entropy/proxy-url-proxy-choice-for-w3m)
-  (advice-add 'w3m-goto-ftp-url :before #'entropy/proxy-url-proxy-choice-for-w3m)
-  (advice-add 'w3m--goto-url--valid-url :before #'entropy/proxy-url-proxy-choice-for-w3m)
-#+END_SRC
+** customized varaibles
+
+See customized-variable-group ~entropy/proxy-url-group~ for them.
 
 ** The regexp rule-set list data
 
@@ -180,7 +147,4 @@ ecosystem, however I thought as be compatible for some web transfer
 chargin area too of that China as the biggest aspect doing for thus.
 The gfw-rule analyzing provided by [[https://github.com/c0001/entropy-adblockP-rule-analysis][entropy-adbp+-rule-analysis]] package
 (Add it to ~load-path~ was requested also).
-
-
-
 
