Update package url

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Created 2019-09-11 Wed 06:25
+# Created 2019-09-11 Wed 06:36
 #+TITLE: Common library for entropy-emacs elisp programming
 #+AUTHOR: entropy
 
@@ -6,7 +6,7 @@
 #+BEGIN_EXAMPLE
 Author:        Entropy <bmsac0001@gmail.com>
 Maintainer:    Entropy <bmsac001@gmail.com>
-URL:           https://github.com/c0001/entropy-common-library/blob/nil/entropy-common-library.el
+URL:           https://github.com/c0001/entropy-common-library
 Package-Version: 0.1.0
 Created:       2018
 Package-Requires: ((emacs "25") (dash "2.16.0") (ivy "0.12.0"))
