--- a/elements/site-lisp/entropy-sdcv/README.org
+++ b/elements/site-lisp/entropy-sdcv/README.org
@@ -1,6 +1,7 @@
 # Created 2019-10-23 Wed 20:29
 #+TITLE: entropy emacs sdcv front-end
 #+AUTHOR: entropy
+#+BEGIN_QUOTE
 Copyright (C) 20181211  Entropy
 
 Author:           Entropy <bmsac0001@gmail.com>
@@ -25,6 +26,7 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#+END_QUOTE
 
 * Commentary:
 
